template-3-nextcloud-only.yaml
# Source: nextcloud/templates/networkpolicy-cronjob.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-cronjob
  namespace: "omara-sep"
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/version: 32.0.5
    helm.sh/chart: nextcloud-0.1.0
    app.kubernetes.io/component: nextcloud
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/component: nextcloud-cronjob
  policyTypes:
    - Ingress
    - Egress
  egress:
    - ports:
        # Allow dns resolution
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - ports:
        - port: 8080
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: keycloak
    - ports:
        - port: 5432
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: primary
              app.kubernetes.io/name: postgresql
    - ports:
        - port: 6379
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: master
              app.kubernetes.io/name: redis
    - ports:
        - port: 9000
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: minio
    - ports:
        - port: 443
          protocol: TCP
      to: []
    - ports:
        - port: 80
          protocol: TCP
      to: []
  ingress:
    - ports:
        - port: 8080
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: nextcloud
              app.kubernetes.io/name: nextcloud
        - podSelector:
            matchLabels:
              nextcloud-client: "true"
    - ports:
        - port: 8080
          protocol: TCP
---
# Source: nextcloud/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud
  namespace: "omara-sep"
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/version: 32.0.5
    helm.sh/chart: nextcloud-0.1.0
    app.kubernetes.io/component: nextcloud
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/component: nextcloud
  policyTypes:
    - Ingress
    - Egress
  egress:
    - ports:
        # Allow dns resolution
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - ports:
        - port: 8080
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: keycloak
    - ports:
        - port: 5432
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: primary
              app.kubernetes.io/name: postgresql
    - ports:
        - port: 6379
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: master
              app.kubernetes.io/name: redis
    - ports:
        - port: 9000
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: minio
    - ports:
        - port: 443
          protocol: TCP
      to: []
    - ports:
        - port: 80
          protocol: TCP
      to: []
  ingress:
    - ports:
        - port: 8080
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: nextcloud
              app.kubernetes.io/name: nextcloud
        - podSelector:
            matchLabels:
              nextcloud-client: "true"
    - ports:
        - port: 8080
          protocol: TCP
---
# Source: nextcloud/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: "omara-sep"
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/version: 32.0.5
    helm.sh/chart: nextcloud-0.1.0
    app.kubernetes.io/component: nextcloud
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 8080
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: nextcloud
---
# Source: nextcloud/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: "omara-sep"
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/version: 32.0.5
    helm.sh/chart: nextcloud-0.1.0
    app.kubernetes.io/component: nextcloud
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/component: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/version: 32.0.5
        helm.sh/chart: nextcloud-0.1.0
        app.kubernetes.io/component: nextcloud
    spec:
      imagePullSecrets:
        - name: null
      serviceAccountName: nextcloud
      automountServiceAccountToken: false
      affinity:
        podAffinity:

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: nextcloud
                    app.kubernetes.io/name: nextcloud
                    app.kubernetes.io/component: nextcloud
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:

      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: "nextcloud"
          image: registry-1.docker.io/library/nextcloud:32.0.5-apache
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          ports:
            - name: http
              containerPort: 8080
          lifecycle:
          volumeMounts:
            - name: post-install-dir
              mountPath: /docker-entrypoint-hooks.d/post-installation
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
            - name: empty-dir
              mountPath: /usr/local/etc/php/conf.d
              subPath: conf.d
            - name: empty-dir
              mountPath: /var/run/apache2
              subPath: apache-run
            - name: nextcloud-data
              mountPath: /var/www/
              subPath: root
            - name: nextcloud-data
              mountPath: /var/www/html
              subPath: html
            - name: nextcloud-data
              mountPath: /var/www/html/config
              subPath: config
            - name: nextcloud-data
              mountPath: /var/www/html/custom_apps
              subPath: custom_apps
            - name: nextcloud-data
              mountPath: /var/www/tmp
              subPath: tmp
            - name: nextcloud-data
              mountPath: /var/www/html/themes
              subPath: themes
            - name: nextcloud-config
              mountPath: /var/www/html/config/.htaccess
              subPath: .htaccess
            - name: nextcloud-config
              mountPath: /var/www/html/config/apache-pretty-urls.config.php
              subPath: apache-pretty-urls.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/apcu.config.php
              subPath: apcu.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/apps.config.php
              subPath: apps.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/autoconfig.php
              subPath: autoconfig.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/empty-skeleton.config.php
              subPath: empty-skeleton.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/redis.config.php
              subPath: redis.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/reverse-proxy.config.php
              subPath: reverse-proxy.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/s3.config.php
              subPath: s3.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/smtp.config.php
              subPath: smtp.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/swift.config.php
              subPath: swift.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/upgrade-disable-web.config.php
              subPath: upgrade-disable-web.config.php
            - name: nextcloud-apache-config
              mountPath: /etc/apache2/ports.conf
              subPath: ports.conf
            - name: nextcloud-apache-config
              mountPath: /etc/apache2/sites-available/000-default.conf
              subPath: 000-default.conf
      volumes:
        - name: post-install-dir
          configMap:
            name: nextcloud-script-post-install
            defaultMode: 0755
        - name: empty-dir
          emptyDir: {}
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud
        - name: nextcloud-config
          configMap:
            name: nextcloud-config
        - name: nextcloud-apache-config
          configMap:
            name: nextcloud-apache-config
---
# Source: nextcloud/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: "omara-sep"
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/version: 32.0.5
    helm.sh/chart: nextcloud-0.1.0
    app.kubernetes.io/component: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: nextcloud.kubernetes.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nextcloud
                port:
                  name: http
